Added Docker support

--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,10 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+
+.vscode/
+/bank-tracking-system.db
+/bank-tracking-system.db-shm
+/bank-tracking-system.db-wal
+/bank-tracking-system.db
+/bank-tracking-system.db-shm
