--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "RedisConnectionString": "localhost,password=redispw"
+    "RedisConnectionString": "redis-bank,password=redispw"
   }
 }
