Passed variables from app-settings.json

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,6 +6,7 @@
     }
   },
   "ConnectionStrings": {
+    "FrontEndConnectionString": "http://localhost:5072",
     "RedisConnectionString": "localhost,password=redispw"
   }
 }
