--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
+    "FrontEndConnectionString": "http://localhost:9903",
     "RedisConnectionString": "redis-bank,password=redispw"
   }
 }
